--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,14 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 URL: https://github.com/ijlyttle/ussie
 BugReports: https://github.com/ijlyttle/ussie/issues
+Imports: 
+    cli,
+    dplyr,
+    memoise,
+    rlang (>= 0.4.11),
+    tibble,
+    utils
+Suggests: 
+    roxygen2,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
