document functions (first pass)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(as_label)
 export(as_name)
 export(enquo)
 export(enquos)
+export(uss_countries)
+export(uss_get_games)
+export(uss_make_games)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
