--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,12 @@ RoxygenNote: 7.1.2
 URL: https://github.com/ijlyttle/ussie
 BugReports: https://github.com/ijlyttle/ussie/issues
 Imports: 
-    cli,
+    engsoccerdata,
     dplyr,
+    tibble,
+    cli,
     memoise,
     rlang (>= 0.4.11),
-    tibble,
     utils,
     withr
 Suggests: 
