--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(enquos)
 export(uss_countries)
 export(uss_get_games)
 export(uss_make_games)
+export(uss_make_games_mem)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
