--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,4 @@ importFrom(rlang,as_label)
 importFrom(rlang,as_name)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
+importFrom(tibble,tibble)
