--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,9 @@ Imports:
     utils,
     withr
 Suggests: 
+    knitr,
+    rmarkdown,
     roxygen2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
