change "games" to "matches"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,9 @@ export(as_name)
 export(enquo)
 export(enquos)
 export(uss_countries)
-export(uss_get_games)
-export(uss_make_games)
-export(uss_make_games_mem)
+export(uss_get_matches)
+export(uss_make_matches)
+export(uss_make_matches_mem)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
