--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(uss_countries)
 export(uss_get_matches)
 export(uss_make_matches)
 export(uss_make_matches_mem)
+export(uss_make_teams_matches)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
