add helpers for points-per-game

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(uss_get_matches)
 export(uss_make_matches)
 export(uss_make_matches_mem)
 export(uss_make_teams_matches)
+export(uss_points)
+export(uss_points_per_win)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
