--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(uss_countries)
 export(uss_get_matches)
 export(uss_make_matches)
 export(uss_make_matches_mem)
-export(uss_make_season_cumulative)
-export(uss_make_season_final)
+export(uss_make_seasons_cumulative)
+export(uss_make_seasons_final)
 export(uss_make_teams_matches)
 export(uss_points_per_win)
 importFrom(rlang,":=")
