--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,10 @@ export(uss_countries)
 export(uss_get_matches)
 export(uss_make_matches)
 export(uss_make_matches_mem)
+export(uss_make_seasons_cumulative)
+export(uss_make_seasons_final)
 export(uss_make_teams_matches)
+export(uss_points_per_win)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
