--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(uss_make_matches_mem)
 export(uss_make_seasons_cumulative)
 export(uss_make_seasons_final)
 export(uss_make_teams_matches)
+export(uss_plot_seasons_tiers)
 export(uss_points_per_win)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
