add more tidy-eval tricks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,7 @@ export(uss_plot_seasons_tiers)
 export(uss_points_per_win)
 export(uss_result)
 import(vctrs)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(tibble,tibble)
