--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,12 @@ Package: ussie
 Title: Work with European Football League Data
 Version: 0.0.0.9000
 Authors@R: 
+  c(
     person("Ian", "Lyttle", , "ijlyttle@me.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-9962-4849"))
+           comment = c(ORCID = "0000-0001-9962-4849")),
+    person("Emma", "Rand", , "emma.rand@york.ac.uk", role = c("aut"),
+           comment = c(ORCID = "0000-0002-1358-8275"))
+  )
 Description: This is a first pass at a demo package for the "Building Tidy Tools" course
  at rstudio::conf(2022L).
 License: MIT + file LICENSE
