--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,18 @@
 Package: ussie
-Title: What the Package Does (One Line, Title Case)
+Title: Work with European Football League Data
 Version: 0.0.0.9000
 Authors@R:
+  c(
     person("Ian", "Lyttle", , "ijlyttle@me.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-9962-4849"))
-Description: What the package does (one paragraph).
+           comment = c(ORCID = "0000-0001-9962-4849")),
+    person("Emma", "Rand", , "emma.rand@york.ac.uk", role = c("aut"),
+           comment = c(ORCID = "0000-0002-1358-8275"))
+  )
+Description:  This is a demo package for the "Building Tidy Tools" course
+ at rstudio::conf(2022L).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://github.com/ijlyttle/ussie
+BugReports: https://github.com/ijlyttle/ussie/issues
