--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, [1-2.*]] # test all the "state" branches
+    branches: [main, master, '[12].*'] # test all the "state" branches
   pull_request:
     branches: [main, master]
 
