--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ RoxygenNote: 7.1.2
 URL: https://github.com/ijlyttle/ussie
 BugReports: https://github.com/ijlyttle/ussie/issues
 Imports: 
+    cli,
     dplyr,
     engsoccerdata,
     rlang,
