--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(uss_countries)
 export(uss_get_matches)
 export(uss_make_matches)
+export(uss_make_teams_matches)
 importFrom(rlang,.data)
 importFrom(tibble,tibble)
