--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(uss_get_matches)
 export(uss_make_matches)
 export(uss_make_teams_matches)
 importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(tibble,tibble)
