get things "working"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(uss_countries)
 export(uss_get_matches)
 export(uss_make_matches)
+export(uss_make_seasons_cumulative)
 export(uss_make_teams_matches)
+export(uss_points_per_win)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,.env)
