--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(uss_countries)
 export(uss_get_matches)
 export(uss_make_matches)
 export(uss_make_seasons_cumulative)
+export(uss_make_seasons_final)
 export(uss_make_teams_matches)
 export(uss_points_per_win)
 importFrom(rlang,":=")
