--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,10 @@ Imports:
     dplyr,
     engsoccerdata,
     ggplot2,
+    glue,
     rlang,
     tibble,
+    vctrs,
     withr
 Suggests:
     conflicted,
