--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-URL: https://github.com/ijlyttle/ussie
-BugReports: https://github.com/ijlyttle/ussie/issues
+URL: https://github.com/rstudio-conf-2022/ussie
+BugReports: https://github.com/rstudio-conf-2022/ussie/issues
 Imports: 
     engsoccerdata,
     dplyr,
