--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,12 @@ Description: This is a demo package for the "Building Tidy Tools" course
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 URL: https://github.com/ijlyttle/ussie
 BugReports: https://github.com/ijlyttle/ussie/issues
 Imports: 
     dplyr,
+    rlang,
     tibble
 Suggests:
     engsoccerdata,
