--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,11 +17,12 @@ RoxygenNote: 7.2.1
 URL: https://github.com/ijlyttle/ussie
 BugReports: https://github.com/ijlyttle/ussie/issues
 Imports: 
+    cli,
     dplyr,
+    engsoccerdata,
     rlang,
     tibble
 Suggests:
-    engsoccerdata,
     conflicted,
     knitr,
     rmarkdown,
